clusters/managed/multimedia/immich/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app immich-redis
  labels:
    app: immich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
      - name: immich-redis
        image: redis:8.10.2
        ports:
        - containerPort: 6379
