clusters/managed/multimedia/immich/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app immich-redis
  labels:
    app: immich-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: immich-redis
  type: ClusterIP
