clusters/managed/multimedia/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app immich-server
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/app: immich
    gethomepage.dev/group: Media
    gethomepage.dev/href: https://immich.trusted.nirmalhk7.com
    gethomepage.dev/icon: immich
    gethomepage.dev/name: Immich
    gethomepage.dev/description: "Photo library"
    gethomepage.dev/weight: "10"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=immich,app.kubernetes.io/name=server"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`immich.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: *app
          port: 2283
